glimagesink: unref the old buffer outside the lock

it could very well deadlock

https://bugzilla.gnome.org/show_bug.cgi?id=723529